# JustCubeMX

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  JustCubeMX.jdebug  cubemx_wb5M.ioc  error_handler.c  faults.c  faults.h  main.c  stack_protection.c  stm32wb5mxx_flash_cm4.ld
Core/Inc/: app_conf.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Core/Src/: app_entry.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_hal_timebase_tim.c  stm32wbxx_it.c
admin/: build.sh  check.sh  debug.sh  debuglog.sh  flash-ble.jlink  flash-ble.sh  flash.jlink  flash.sh  format.sh
cmake/: gcc-arm-none-eabi.cmake  version.h.in
cmake/stm32cubemx/: CMakeLists.txt
